<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/productImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/darker_gray"
            android:src="@drawable/product_image"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/productShareButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productImage" />

        <TextView
            android:id="@+id/productTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/product_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toStartOf="@id/productShareButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productImage" />

        <TextView
            android:id="@+id/productAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/product_author"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintStart_toStartOf="@id/productTitle"
            app:layout_constraintTop_toBottomOf="@id/productTitle" />

        <TextView
            android:id="@+id/productPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/product_price"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/productAuthor" />

        <TextView
            android:id="@+id/productOldPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:alpha="0.47"
            android:text="@string/product_old_price"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintBaseline_toBaselineOf="@id/productPrice"
            app:layout_constraintEnd_toStartOf="@id/productDiscount"
            app:layout_constraintStart_toEndOf="@id/productPrice"
            app:layout_constraintTop_toBottomOf="@id/productAuthor"/>

        <TextView
            android:id="@+id/productOldPriceCrossing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/red_line"
            app:layout_constraintEnd_toEndOf="@id/productOldPrice"
            app:layout_constraintStart_toStartOf="@id/productOldPrice"
            app:layout_constraintBaseline_toBaselineOf="@id/productOldPrice"/>

        <TextView
            android:id="@+id/productDiscount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/background_round_corners_rectangle"
            android:paddingHorizontal="8dp"
            android:text="@string/product_discount"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/productPrice"
            app:layout_constraintStart_toEndOf="@id/productOldPrice"
            app:layout_constraintTop_toTopOf="@id/productPrice"/>

        <TextView
            android:id="@+id/readFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/read_fragment"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/productPrice"/>

        <TextView
            android:id="@+id/productPromotionsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:text="@string/product_promotions_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/readFragment"/>

        <ImageView
            android:id="@+id/promotionBackground"
            android:layout_width="270dp"
            android:layout_height="90dp"
            android:layout_marginTop="16dp"
            android:background="@color/light_gray"
            app:layout_constraintTop_toBottomOf="@+id/productPromotionsTitle"
            app:layout_constraintStart_toStartOf="@id/productPromotionsTitle"/>

        <TextView
            android:id="@+id/bestPurchasePromotionDiscount"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:padding="5dp"
            android:gravity="center"
            android:background="@drawable/background_circle"
            android:text="@string/product_discount"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textColor="@color/white"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="@id/promotionBackground"
            app:layout_constraintStart_toStartOf="@id/promotionBackground"/>

        <TextView
            android:id="@+id/bestPurchasePromotionText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/best_purchase_promotion_text"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/promotionBackground"
            app:layout_constraintStart_toEndOf="@id/bestPurchasePromotionDiscount"
            app:layout_constraintTop_toTopOf="@id/promotionBackground"/>

        <TextView
            android:id="@+id/bestPurchasePromotionTimer"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/best_purchase_promotion_timer"
            android:textColor="@color/red"
            app:layout_constraintStart_toStartOf="@id/promotionBackground"
            app:layout_constraintTop_toBottomOf="@id/bestPurchasePromotionDiscount"/>

        <TextView
            android:id="@+id/descriptionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/description_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            app:layout_constraintTop_toBottomOf="@id/promotionBackground"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/productDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/product_description"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>