<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/promotionCard"
    android:layout_width="270dp"
    android:layout_height="90dp"
    android:background="@color/light_gray"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/bestPurchasePromotionDiscount"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        android:gravity="center"
        android:background="@drawable/background_circle"
        android:text="@string/product_discount"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:textColor="@color/white"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toTopOf="@id/bestPurchasePromotionTimer"
        app:layout_constraintEnd_toStartOf="@id/bestPurchasePromotionText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bestPurchasePromotionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/best_purchase_promotion_text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/bestPurchasePromotionTimer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bestPurchasePromotionDiscount"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/bestPurchasePromotionTimer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/best_purchase_promotion_timer"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bestPurchasePromotionDiscount"/>

</androidx.constraintlayout.widget.ConstraintLayout>